--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    maven { 
+         url "http://jars.interlis.ch" 
+    } 
+    
 }
 
 dependencies {
@@ -21,7 +25,8 @@ dependencies {
     //api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    //implementation 'com.google.guava:guava:23.0'
+    implementation 'ch.interlis:ili2c-tool:4.7.7'
+    implementation 'ch.interlis:ili2c-core:4.7.7'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
